# VocalStars

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  EVALUATION.md  EVAL_README.md  EVAL_RUN_REPORT.md  INSTRUCTIONS.md  M0_MODEL_OUTPUT_AUDIT.md  M1_BASELINE_COMPARISON.md  M2_SYNTHETIC_MODEL_TESTS.md  MODEL_AUDIT.md  MODEL_FAILURE_ANALYSIS.md  README.md  docker-compose.yml  project_thought01.md  project_thought02.md  requirements-dev.txt  setup.sh
backend/: pyproject.toml  requirements-ml.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/routers/: __init__.py  analysis.py  audio_processing.py  auth.py  coaching.py  live_analysis.py  progress.py  reference.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/models/: __init__.py  analysis.py  progress.py  recommendation.py  session.py  user.py
backend/app/schemas/: __init__.py  analysis.py  coaching_result.py  progress.py  recommendation.py  session.py  user.py
backend/app/services/: __init__.py  analysis.py  audio_processing.py  coaching.py  ml_inference.py  ml_serialiser.py  progress.py  ui_ready_response.py
backend/tests/: test_coaching_categories.py  test_label_inventory.py  test_ml_endpoint.py
docs/: EVALUATION_RESULTS.md  api-contract.md  architecture.md  new-frontend-ml-integration.md  setup.md
frontend/: package-lock.json  package.json
ml/: __init__.py  pipeline.py
ml_new/: presentation.html  results_dashboard.html
new_frontend/: .env.example  README.md  index.html  metadata.json  package-lock.json  (+1 more)
(+249 files in other folders)
