[tool.poetry]
name = "vocalstars-backend"
version = "0.1.0"
description = "Backend API for VocalStars beginner vocal coaching"
authors = ["VocalStars Team <hello@vocalstars.example>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = "^0.23.2"
SQLAlchemy = "^2.0.38"
psycopg = {extras = ["binary"], version = "^3.5.1"}
python-dotenv = "^1.0.0"
pydantic = "^2.10.12"
librosa = "^0.10.0"
torch = "^2.1.0"
torchcrepe = "^0.0.24"
parselmouth = "0.4.4"
numpy = "^2.3.0"
scipy = "^1.12.2"

[tool.poetry.dev-dependencies]
black = "^24.9.0"
isort = "^5.12.0"
ruff = "^0.0.323"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
